# bored-charts

./: .dockerignore  .editorconfig  .gitignore  .prettierrc  Dockerfile  Makefile  README.md  compose.yaml  package-lock.json  package.json  pyproject.toml
.github/actions/setup-node/: action.yaml
.github/actions/setup-python/: action.yaml
.github/workflows/: publish.yaml  test.yaml
bored-charts/: README.md  pyproject.toml
bored-charts/boredcharts/: __init__.py  cli.py  pdf.py  utils.py  webapp.py
bored-charts/boredcharts/cli/: __init__.py  cli.py  discover.py
bored-charts/boredcharts/templates/: index.html
boredcharts/: figures.py  jinja.py  webapp.py
boredcharts/templates/: base.html  index.html  report.html
boredcharts/templates/components/: figure.html
boredcharts/templates/pages/: example.md
example/: README.md  app.py  pyproject.toml
example/bcexample/: figures.py
examples/_alternatives/: .gitignore  README.md  build.sh  requirements.txt
examples/_alternatives/reports/full/: main.md
examples/_alternatives/reports/full/analysis/: figures.py
examples/_alternatives/reports/minimal/: main.md
examples/full/: Dockerfile  Makefile  README.md  app.py  pyproject.toml
examples/full/analysis/: cars.py  elasticity.py  medals.py  penguins.py  population.py
examples/full/app/: elasticity.py  main.py  medals.py  population.py
examples/full/bcexample/: figures.py
examples/full/pages/: elasticity.md  medals.md  populations.md  price-elasticity.md  vega-lite-is-cool.md
examples/full/pages/the-arctic/: penguins.md
examples/minimal/: README.md  main.py  pyproject.toml
examples/minimal/pages/: populations.md
tests/: test_routes.py  test_utils.py
