[project]
name = "bored-charts"
dynamic = ["version"]
description = "Easy, minimal, PDF-able data reports with python and markdown."
authors = [{ name = "Oliver Lambson", email = "oliverlambson@gmail.com" }]
dependencies = [
    "fastapi>=0.112.0",
    "jinja2>=3.1.4",
    "uvicorn>=0.30.5",
    "plotly>=5.23.0",
    "pandas>=2.2.2",
    "markdown>=3.6",
    "markupsafe>=2.1.5",
]
readme = "README.md"
license = "MIT"
requires-python = ">= 3.12"

[project.urls]
Repository = "https://github.com/oliverlambson/bored-charts.git"
Issues = "https://github.com/oliverlambson/bored-charts/issues"

[project.scripts]
boredcharts = "boredcharts.webapp:entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "boredcharts/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["boredcharts"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "mypy>=1.11.1",
    "ruff>=0.5.7",
    "types-markdown>=3.6.0.20240316",
    "httpx>=0.27.0",
    "mdformat>=0.7.17",
    "mdformat-gfm>=0.3.6",
    "mdformat-frontmatter>=2.0.8",
    "mdformat-footnote>=0.1.1",
    "djlint>=1.34.1",
]

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.mypy]
enable_incomplete_feature = ["NewGenericSyntax"]
strict = true

[[tool.mypy.overrides]]
module = ["plotly.*"]
ignore_missing_imports = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by ruff format)
    "W505", # line too long (handled by ruff format)
]
