[project]
name = "bored-charts-example-full"
version = "0.1.0"
description = "A fuller example of a bored-charts project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bored-charts",
    "uvicorn>=0.30.5",
    "matplotlib>=3.9.2",
    "plotly>=5.23.0",
    "altair[all]>=5.4.0",
    "vega-datasets>=0.9.0",
    "seaborn>=0.13.2",
]

[project.scripts]
bc-example = "app:entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["analysis", "app"]
